画像添付機能の実装

--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -3,6 +3,9 @@
     <%= form.label :name %> <%= form.text_field :name, required: true %>
   </div>
   <div>
+    <%= form.file_field :image, accept: "image/png,image/jpeg,image/gif" %>
+  </div>
+  <div>
     <%= form.label :comment %> <%= form.text_area :comment %>
   </div>
   <div>
