--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,6 +1,14 @@
 <div>
   <p>【メールアドレス】 <%= food.user.email %></p>
   <p>【食品名】 <%= food.name %></p>
+  <!-- ***** いいねの pタグ に id 属性を追加 ***** -->
+  <p id="food-<%= food.id %>">
+    <% if food.liked_by?(current_user) %>
+      <%= render "like", food: food %>
+    <% else %>
+      <%= render "dislike", food: food %>
+    <% end %>
+  </p>
   <p>
     <%= link_to "詳細", food %>
     <% if current_user.id == food.user_id %>
