いいね機能実装

--- a/app/views/foods/_dislike.html.erb
+++ b/app/views/foods/_dislike.html.erb
@@ -1,2 +1,2 @@
 <%# 「いいね」していない（クリックすると「いいね！」にする） %>
-<%= link_to "☆", food_likes_path(food), method: :food, remote: true %>
+<%= link_to "☆", food_likes_path(food), method: :post, remote: true %>
